# email_to_markdown

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.mf_support/: Makefile.python  Makefile.python.build
src/emailmd/: command_extract.py  emailmd.py  emltools.py  msgtools.py  standardemail.py  standardemailtools.py  util.py
