# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2022 Troy Williams

# uuid:
# author: Troy Williams
# email:  troy.williams@bluebill.net
# date:   2022-05-22
# -----------

[metadata]
name = emailmd
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = Convert email to markdown
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10


[options]
packages = find:
package_dir =
    =src

install_requires =
    click
    rich
    extract-msg
    markdownify
    lxml
    pathvalidate
    msglite

include_package_data = True
python_requires >= 3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    emailmd=emailmd.emailmd:main

